@@ -1,3 +1,12 @@
+2006-12-13  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/3712
+	* gas/i386/inval.s: Add invalid insertq.
+	* gas/i386/x86-64-inval.s: Likewise.
+
+	* gas/i386/inval.l: Updated.
+	* gas/i386/x86-64-inval.l: Likewise.
+
 2006-12-08  Christian Groessler  <chris@groessler.org>
 
 	* gas/z8k/reglabel.d: New test.
