@@ -1,3 +1,10 @@
+2006-12-13  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/3712
+	* config/tc-i386.c (match_template): Use MAX_OPERANDS for the
+	number of operands. Issue an error if MAX_OPERANDS != 4. Add
+	the 4th operand check.
+
 2006-12-13  Paul Brook  <paul@codesourcery.com>
 
 	* config/tc-arm.c (arm_arch_option_table): Add v7-{a,r,m}.
